--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -13,7 +13,7 @@
         <th style="width: 3rem">
           <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <th pSortableColumn="pno">Product Number<p-sortIcon field="pno"></p-sortIcon>
+        <th pSortableColumn="pno">Product Barcode<p-sortIcon field="pno"></p-sortIcon>
         </th>
         <th pSortableColumn="pcategory">Product Category<p-sortIcon field="pcategory"></p-sortIcon>
         </th>
@@ -42,8 +42,10 @@
         <td>
           <button pButton pRipple icon="pi pi-pencil" class="p-button-rounded p-button-success p-mr-2"
             (click)="onEditClicked(product.pno)" [ngStyle]="{'margin-right':'8px'}"></button>
-          <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning"
+          <button pButton pRipple icon="pi pi-trash" class="p-button-rounded p-button-warning p-mr-2"
             (click)="deleteProduct(product)"></button>
+            <button pButton pRipple icon="pi pi-qrcode" class="p-button-rounded p-button-success"
+            ></button>
         </td>
       </tr>
     </ng-template>
